# garden-glossary

./: .gitattributes  .gitignore  README.md
.github/workflows/: enforce-dev-to-main.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt  serverless.yml
backend/src/app/: config.py  main.py
backend/src/app/api/endpoints/: plant_details_llm.py  plant_details_rhs.py  plant_identification.py
backend/src/app/exceptions/: __init__.py  exceptions.py
backend/src/app/models/: __init__.py  api.py  domain.py
backend/src/app/services/: __init__.py  plant_details_llm.py  plant_details_rhs.py  plant_identification.py
backend/src/app/utils/: __init__.py  web_drivers.py
backend_python/: .gitignore
backend_python/src/: main.py
backend_python/src/app/: config.py  main.py
frontend/: .env.dev  .env.mock  .gitignore  README.md  pubspec.yaml
frontend/android/app/: build.gradle
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart  main_dev.dart  main_local.dart  main_mock.dart  main_prod.dart
frontend/lib/config/: api_config.dart
frontend/test/: widget_test.dart
frontend/web/: manifest.json
frontend_flutter/: pubspec.yaml
frontend_flutter/lib/: main.dart
frontend_flutter/windows/: CMakeLists.txt
garden_glossary/: README.md  pubspec.yaml
garden_glossary/linux/: CMakeLists.txt  my_application.cc
garden_glossary/test/: widget_test.dart
garden_glossary/web/: index.html
garden_glossary_flutter/: pubspec.yaml
(+65 files in other folders)
