[project]
name = "backend"
version = "0.1.0"
description = "Garden Glossary backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "beautifulsoup4>=4.12.3",
    "boto3>=1.36.3",
    "fastapi>=0.112.2",
    "h2>=4.1.0",
    "lxml>=5.3.1",
    "mangum>=0.19.0",
    "pydantic-settings>=2.6.1",
    "python-multipart>=0.0.18",
    "tokenizers>=0.22.0",
    "uvicorn>=0.31.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[tool.ruff]
select = ["E", "W", "F", "I"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[project.scripts]
lint = "ruff check ."
format = "ruff format ."
type-check = "mypy ."
check-all = "bash -c 'ruff check . && ruff format --check . && mypy .'"